# svc/api/routes/register.go
@@ -24,6 +24,7 @@ import (
 
 	v2DeployCreateDeployment "github.com/unkeyed/unkey/svc/api/routes/v2_deploy_create_deployment"
 	v2DeployGetDeployment "github.com/unkeyed/unkey/svc/api/routes/v2_deploy_get_deployment"
+	v2DeploymentsCreateDeployment "github.com/unkeyed/unkey/svc/api/routes/v2_deployments_create_deployment"
 
 	v2IdentitiesCreateIdentity "github.com/unkeyed/unkey/svc/api/routes/v2_identities_create_identity"
 	v2IdentitiesDeleteIdentity "github.com/unkeyed/unkey/svc/api/routes/v2_identities_delete_identity"
@@ -333,9 +334,18 @@ func Register(srv *zen.Server, svc *Services, info zen.InstanceInfo) {
 	)
 
 	// ---------------------------------------------------------------------------
-	// v2/deploy
+	// v2/deployments
 
-	// v2/deploy.createDeployment
+	// v2/deployments.createDeployment
+	srv.RegisterRoute(
+		protectedMiddlewares,
+		&v2DeploymentsCreateDeployment.Handler{
+			DB:         svc.Database,
+			CtrlClient: svc.CtrlDeploymentClient,
+		},
+	)
+
+	// v2/deploy.createDeployment (deprecated)
 	srv.RegisterRoute(
 		protectedMiddlewares,
 		&v2DeployCreateDeployment.Handler{
@@ -344,11 +354,10 @@ func Register(srv *zen.Server, svc *Services, info zen.InstanceInfo) {
 		},
 	)
 
-	// v2/deploy.getDeployment
+	// v2/deploy.getDeployment (deprecated)
 	srv.RegisterRoute(
 		protectedMiddlewares,
 		&v2DeployGetDeployment.Handler{
-
 			DB: svc.Database,
 		},
 	)
